regex-c: improved posix parser, added posix dumper

--- a/regex-c/Makefile
+++ b/regex-c/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -g -Wall -Wstrict-prototypes -DLISP_DUMP_AS_C
 LDFLAGS = 
 CC = gcc
 
-OBJ = lisp.o regex.o brzozowski.o
+OBJ = lisp.o regex.o regex_posix_parse.o regex_posix_dump.o brzozowski.o
 
 default: test
 
