regex-c: added retool

--- a/regex-c/Makefile
+++ b/regex-c/Makefile
@@ -5,16 +5,16 @@ CC = gcc
 
 OBJ = lisp.o regex.o regex_posix_parse.o regex_posix_dump.o brzozowski.o
 
-default: test equiv
+default: retool
+
+check: retool
+	@./runtests.sh
 
 clean:
-	rm -f *.o test equiv
+	rm -f *.o retool
 
-test: $(OBJ) test.o
-	$(CC) -o test test.o $(OBJ) $(LDFLAGS)
-
-equiv: $(OBJ) equiv.o
-	$(CC) -o equiv equiv.o $(OBJ) $(LDFLAGS)
+retool: $(OBJ) retool.o
+	$(CC) -o retool retool.o $(OBJ) $(LDFLAGS)
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
