regex-c: splited retool.c in separate files (one per command)

--- a/regex-c/Makefile
+++ b/regex-c/Makefile
@@ -4,6 +4,7 @@ LDFLAGS =
 CC = gcc
 
 OBJ = lisp.o regex.o regex_posix_parse.o regex_posix_dump.o brzozowski.o
+RETOOL_OBJ = retool_dump.o retool_equiv.o retool.o
 
 default: retool
 
@@ -13,8 +14,8 @@ check: retool
 clean:
 	rm -f *.o retool
 
-retool: $(OBJ) retool.o
-	$(CC) -o retool retool.o $(OBJ) $(LDFLAGS)
+retool: $(OBJ) $(RETOOL_OBJ)
+	$(CC) -o retool $(OBJ) $(RETOOL_OBJ) $(LDFLAGS)
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
