regex-c: made dependent on uclisp

--- a/regex-c/Makefile
+++ b/regex-c/Makefile
@@ -1,10 +1,15 @@
 
-CFLAGS = -g -Wall -Wstrict-prototypes -DLISP_DUMP_AS_C
+ULISP_PATH = ./ulisp
+ULISP_LIB  = $(ULISP_PATH)/libulisp.a
+
+CFLAGS = -g -Wall -Wstrict-prototypes -I$(ULISP_PATH)
 LDFLAGS = 
 CC = gcc
 
-OBJ = lisp.o regex.o regex_posix_parse.o regex_posix_dump.o brzozowski.o
+OBJ = regex.o regex_posix_parse.o regex_posix_dump.o brzozowski.o
 RETOOL_OBJ = retool_dump.o retool_echo.o retool_equiv.o retool_deriv.o retool_match.o retool_dfa.o retool.o
+
+.PHONY : ulisp
 
 default: retool
 
@@ -14,8 +19,11 @@ check: retool
 clean:
 	rm -f *.o retool
 
-retool: $(OBJ) $(RETOOL_OBJ)
-	$(CC) -o retool $(OBJ) $(RETOOL_OBJ) $(LDFLAGS)
+retool: ulisp $(OBJ) $(RETOOL_OBJ)
+	$(CC) -o retool $(OBJ) $(RETOOL_OBJ) $(ULISP_LIB) $(LDFLAGS)
+
+ulisp:
+	make -C $(ULISP_PATH) lib
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
