regex-c: accomodated latest changes in ulisp

--- a/regex-c/Makefile
+++ b/regex-c/Makefile
@@ -9,8 +9,6 @@ CC = gcc
 OBJ = regex.o regex_posix_parse.o regex_posix_dump.o brzozowski.o
 RETOOL_OBJ = retool_dump.o retool_echo.o retool_equiv.o retool_deriv.o retool_match.o retool_dfa.o retool.o
 
-.PHONY : ulisp
-
 default: retool
 
 check: retool
@@ -19,11 +17,8 @@ check: retool
 clean:
 	rm -f *.o retool
 
-retool: ulisp $(OBJ) $(RETOOL_OBJ)
+retool: $(OBJ) $(RETOOL_OBJ) $(ULISP_LIB)
 	$(CC) -o retool $(OBJ) $(RETOOL_OBJ) $(ULISP_LIB) $(LDFLAGS)
-
-ulisp:
-	make -C $(ULISP_PATH) lib
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
